[package]
name = "solana-validator-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-rpc-client = "2.1.0"
solana-rpc-client-api = "2.1.0"
tokio = "1.41.0"
tokio-util = "0.7.12"
clap = "4.5.20"
tracing = "0.1.40"
serde = "1.0.214"
serde_json = "1.0.132"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.92"
reqwest = "0.12.9"
mapplot = "0.1.0"
csv = "1.3.0"
progress = "0.2.0"
log = "0.4.22"
figment = {version = "0.10.19", features = ["env"]}
dotenv = "0.15.0"


